components/ua/establishment-service/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: establishment-service
spec:
  template:
    spec:
      containers:
        - name: establishment-service
          image: ghcr.io/isisbusapps/establishment-service@sha256:a09d4da1181ba3432d4091dd03be44e41dbace5f8682dc49f5a17fcdb7a5787b
          ports:
            - containerPort: 4019
