components/ua/establishment-service/overlays/dev/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: establishment-service
spec:
  template:
    spec:
      containers:
        - name: establishment-service
          image: ghcr.io/isisbusapps/establishment-service@sha256:f7ac9187856f881cf668d2a4a76c3f102ecf79a32d7688b6879599e77d72bd77
          ports:
            - containerPort: 4019
