components/ua/establishment-service/overlays/dev/enable-debug-service.yml
apiVersion: v1
kind: Service
metadata:
  name: establishment-service
spec:
  ports:
    - name: debug
      protocol: TCP
      port: 4019
      targetPort: 4019
